@@ -74,15 +74,44 @@ public class DocumentBuilder {
     }
   }
 
-
+  /**
+   * Add the specified {@link org.apache.solr.schema.SchemaField} to the document.  Does not invoke the copyField mechanism.
+   * @param sfield The {@link org.apache.solr.schema.SchemaField} to add
+   * @param val The value to add
+   * @param boost The boost factor
+   *
+   * @see #addField(String, String)
+   * @see #addField(String, String, float)
+   * @see #addSingleField(org.apache.solr.schema.SchemaField, String, float)
+   */
   public void addField(SchemaField sfield, String val, float boost) {
     addSingleField(sfield,val,boost);
   }
 
+  /**
+   * Add the Field and value to the document, invoking the copyField mechanism
+   * @param name The name of the field
+   * @param val The value to add
+   *
+   * @see #addField(String, String, float)
+   * @see #addField(org.apache.solr.schema.SchemaField, String, float)
+   * @see #addSingleField(org.apache.solr.schema.SchemaField, String, float)
+   */
   public void addField(String name, String val) {
     addField(name, val, 1.0f);
   }
 
+  /**
+   * Add the Field and value to the document with the specified boost, invoking the copyField mechanism
+   * @param name The name of the field.
+   * @param val The value to add
+   * @param boost The boost
+   *
+   * @see #addField(String, String)
+   * @see #addField(org.apache.solr.schema.SchemaField, String, float)
+   * @see #addSingleField(org.apache.solr.schema.SchemaField, String, float)
+   *
+   */
   public void addField(String name, String val, float boost) {
     SchemaField sfield = schema.getFieldOrNull(name);
     if (sfield != null) {
