@@ -402,6 +402,8 @@ Other Changes
 
 11. SOLR-531: Different exit code for rsyncd-start and snappuller if disabled (Thomas Peuss via billa)
 
+12. SOLR-550: Clarified DocumentBuilder addField javadocs (gsingers)
+
 Build
  1. SOLR-411.  Changed the names of the Solr JARs to use the defacto standard JAR names based on
     project-name-version.jar.  This yields, for example:
